--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ distlib==0.3.4
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2.13
+django-allauth==0.51.0
 django-summernote==0.8.20.0
 docutils==0.18.1
 executing==0.8.3
@@ -23,13 +24,17 @@ jupyter-core==4.10.0
 keyring==23.6.0
 mypy==0.961
 nbclient==0.6.4
+oauthlib==3.2.0
 pipenv==2022.6.7
 prompt-toolkit==3.0.29
 psycopg2==2.9.3
+PyJWT==2.4.0
 pylint==2.14.3
+python3-openid==3.2.0
 pytz==2022.1
 pyzmq==23.1.0
 requests==2.28.0
+requests-oauthlib==1.3.1
 rich==12.4.4
 rope==1.1.1
 sqlparse==0.4.2
